Update skills percentages, added more skills | Changed the interests section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,3 +1188,12 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+.text-purple {
+  color: #DB20AF !important;
+}
+
+.highlight {
+  color: #DB20AF;
+  font-weight: bolder;
+}
