--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@
 /* Fonts */
 :root {
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-primary: "Century Gothic", sans-serif;
+  --font-primary: "Amatic SC", sans-serif;
   --font-secondary: "Inter", sans-serif;
 }
 
@@ -22,8 +22,6 @@
   --color-default: #1D1D1D;
   --color-primary: #DB20AF;
   --color-secondary: #1f1f24;
-
-  --primary-font-color: #fff;
 }
 
 /* Smooth scroll behavior */
@@ -602,7 +600,7 @@ section {
 .about .call-us p {
   font-size: 28px;
   font-weight: 700;
-  color: var(--primary-font-colory);
+  color: var(--color-primary);
 }
 
 .about .content ul {
@@ -777,7 +775,7 @@ section {
 
 .why-us .icon-box p {
   font-size: 15px;
-  color: var(--primary-font-color);
+  color: #6c757d;
 }
 
 @media (min-width: 1200px) {
@@ -819,7 +817,7 @@ section {
   font-family: var(--font-secondary);
   font-size: 16px;
   font-weight: 700;
-  color: var(--primary-font-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /*--------------------------------------------------------------
@@ -1502,7 +1500,7 @@ section {
   font-size: 64px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: var(--primary-font-color);
+  color: var(--color-secondary);
   font-family: var(--font-primary);
 }
 
@@ -1511,7 +1509,7 @@ section {
 }
 
 .hero p {
-  color: var(--primary-font-color);
+  color: #4f4f5a;
   font-weight: 400;
   margin-bottom: 30px;
 }
@@ -1530,7 +1528,7 @@ section {
 }
 
 .hero .btn-book-a-table:hover {
-  background: rgb(172, 26, 138);
+  background: rgba(219, 32, 175);
   box-shadow: 0 8px 28px rgba(206, 18, 18, 0.45);
 }
 
@@ -1538,7 +1536,7 @@ section {
   font-size: 16px;
   transition: 0.5s;
   margin-left: 25px;
-  color: var(--primary-font-color);
+  color: var(--font-secondary);
   font-weight: 600;
 }
 
