--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -783,7 +783,12 @@ section {
   font-size: 20px;
   font-weight: 400;
   margin: 0 0 30px 0;
+  color: var(--primary-font-color);
   font-family: var(--font-secondary);
+}
+
+.why-us .icon-box span {
+  color: var(--primary-font-color);
 }
 
 .why-us .icon-box p {
@@ -794,6 +799,7 @@ section {
 @media (min-width: 1200px) {
   .why-us .icon-box:hover {
     transform: scale(1.1);
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.3);
   }
 }
 
