--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,15 +24,16 @@
   --color-primary: #c526a0;
   --color-secondary: #1f1f24;
   --color-third: #19191b;
+  --color-p: #6c757d;
 
   --primary-font-color: #fff;
-  --border-radius: 10px;
-  --border-raduis-100: 100%;
 }
 
 /* border radius */
 :root {
   --border-radius-10px: 10px;
+  --border-raduis-100: 100%;
+
 }
 
 /* Smooth scroll behavior */
@@ -793,7 +794,7 @@ section {
 
 .why-us .icon-box p {
   font-size: 15px;
-  color: #6c757d;
+  color: var(--color-p);
 }
 
 @media (min-width: 1200px) {
@@ -807,7 +808,7 @@ section {
 # Stats Counter Section
 --------------------------------------------------------------*/
 .stats-counter {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/stats-bg.jpg") center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/stats-bg.png") center center;
   background-size: cover;
   padding: 100px 0;
 }
