--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -800,7 +800,9 @@ section {
 @media (min-width: 1200px) {
   .why-us .icon-box:hover {
     transform: scale(1.1);
-    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.3);
+    /* box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.3); */
+    background-color: rgb(98, 15, 79);
+    box-shadow: 0 8px 28px rgb(98, 15, 79);
   }
 }
 
@@ -1707,7 +1709,7 @@ body {
 
 .divider {
   margin-top: 20px;
-  width: 30%;
+  width: 600px;
   background: linear-gradient(to right, transparent 0%, var(--color-primary) 20%, var(--color-primary) 80%, transparent 100%);
   height: 2px; /* Adjust thickness as needed */
 }
