--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -794,7 +794,7 @@ section {
 
 .why-us .icon-box p {
   font-size: 15px;
-  color: var(--color-p);
+  color: var(--primary-font-color);
 }
 
 @media (min-width: 1200px) {
@@ -1712,4 +1712,54 @@ body {
   width: 600px;
   background: linear-gradient(to right, transparent 0%, var(--color-primary) 20%, var(--color-primary) 80%, transparent 100%);
   height: 2px; /* Adjust thickness as needed */
+}
+
+/* project section */
+.project .project-box {
+  text-align: center;
+  background: var(--color-secondary);
+  padding: 40px 30px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(55, 55, 63, 0.1);
+  transition: 0.3s;
+}
+.project .project-box p {
+  font-size: 15px;
+  color: var(--primary-font-color);
+  text-align: left;
+}
+
+.project .project-box h4 {
+  color: var(--primary-font-color);
+  text-align: left !important;
+}
+
+.project .project-box i {
+  color: var(--color-primary);
+  font-size: 20px;
+  background: var(--color-third);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+}
+
+@media (min-width: 1200px) {
+  .project .project-box:hover {
+    transform: scale(1.1);
+    /* box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.3); */
+    background-color: rgb(98, 15, 79);
+    box-shadow: 0 8px 28px rgb(98, 15, 79);
+  }
+}
+
+.side-by-side {
+  display: flex;
+}
+
+.glightbox.project-img {
+  margin-right: 10px; /* Adjust this value to add space between the elements */
 }
