--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,7 +210,7 @@ section {
   inset: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: var(--color-default);
   transition: all 0.6s ease-out;
   width: 100%;
   height: 100vh;
@@ -914,8 +914,11 @@ section {
 }
 
 .menu .tab-content .menu-item {
-  -moz-text-align-last: center;
-  text-align-last: center;
+  text-align: left;
+  background: var(--color-secondary);
+  padding: 40px 30px;
+  height: 100%;
+  transition: 0.3s;
 }
 
 .menu .tab-content .menu-item .menu-img {
@@ -926,10 +929,10 @@ section {
 .menu .tab-content .menu-item h4 {
   font-size: 22px;
   font-weight: 500;
-  color: var(--color-secondary);
+  color: var(--primary-font-color);
   font-family: var(--font-secondary);
   font-weight: 30px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .menu .tab-content .menu-item .ingredients {
@@ -1712,48 +1715,6 @@ body {
   width: 600px;
   background: linear-gradient(to right, transparent 0%, var(--color-primary) 20%, var(--color-primary) 80%, transparent 100%);
   height: 2px; /* Adjust thickness as needed */
-}
-
-/* project section */
-.project .project-box {
-  text-align: center;
-  background: var(--color-secondary);
-  padding: 40px 30px;
-  width: 100%;
-  height: 100%;
-  border: 1px solid rgba(55, 55, 63, 0.1);
-  transition: 0.3s;
-}
-.project .project-box p {
-  font-size: 15px;
-  color: var(--primary-font-color);
-  text-align: left;
-}
-
-.project .project-box h4 {
-  color: var(--primary-font-color);
-  text-align: left !important;
-}
-
-.project .project-box i {
-  color: var(--color-primary);
-  font-size: 20px;
-  background: var(--color-third);
-  border-radius: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-}
-
-@media (min-width: 1200px) {
-  .project .project-box:hover {
-    transform: scale(1.1);
-    /* box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.3); */
-    background-color: rgb(98, 15, 79);
-    box-shadow: 0 8px 28px rgb(98, 15, 79);
-  }
 }
 
 .side-by-side {
