--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -927,7 +927,6 @@ section {
 
 .menu .tab-content .menu-item .menu-img {
   padding: 0 60px;
-  margin-bottom: 15px;
 }
 
 .menu .tab-content .menu-item h4 {
@@ -1726,5 +1725,19 @@ body {
 }
 
 .project-img {
-  margin-right: 10px; /* Adjust this value to add space between the elements */
+  margin-right: 10px; 
+  width: 50px;
+  height: 50px;
+}
+
+.project-box i {
+  color: var(--color-primary);
+  font-size: 20px;
+  background: var(--color-third);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
 }
