redesigned the project sections for web development and graphics design; added videos in the video editing project section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -923,6 +923,7 @@ section {
 .project-box {
   background-color: var(--color-secondary);
   padding: 40px 30px;
+  margin-bottom: 20px;
 }
 
 .menu .tab-content .menu-item .menu-img {
