--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -585,6 +585,11 @@ section {
 --------------------------------------------------------------*/
 .about .about-img {
   min-height: 500px;
+  background-image: url('/assets/img/about.png');
+  background-size: 90%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #000;
 }
 
 .about h3 {
@@ -598,7 +603,7 @@ section {
   left: 10%;
   right: 10%;
   bottom: 10%;
-  background-color: #fff;
+  /* background-color: var(--color-secondary); */
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.08);
   padding: 20px;
   text-align: center;
@@ -609,6 +614,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-family: var(--font-default);
+  color: var(--primary-font-color);
 }
 
 .about .call-us p {
@@ -620,6 +626,28 @@ section {
 .about .content ul {
   list-style: none;
   padding: 0;
+  color: var(--primary-font-color);
+}
+
+.about .call-us i {
+  margin-right: 15px;
+}
+.about .btn-send-request {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 36px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #fff;
+  background: var(--color-primary);
+  box-shadow: 0 8px 28px rgb(46, 8, 37);
+}
+
+.about .btn-send-request:hover {
+  background: rgba(219, 32, 175);
+  box-shadow: 0 8px 28px rgb(98, 15, 79);
 }
 
 .about .content ul li {
@@ -1599,6 +1627,10 @@ section {
   border-radius: var(--border-raduis-100);
   background-color: var(--color-default);
   overflow: hidden; 
+  height: 500px;
+  width: 500px;
+  background-color: #000;
+  background-position: center;
 }
 
 .hero .banner-image img {
@@ -1725,7 +1757,7 @@ body {
 
 .divider {
   margin-top: 20px;
-  width: 600px;
+  width: 100%;
   background: linear-gradient(to right, transparent 0%, var(--color-primary) 20%, var(--color-primary) 80%, transparent 100%);
   height: 2px; /* Adjust thickness as needed */
 }
@@ -1758,7 +1790,8 @@ body {
   display: inline-block;
   width: 100%;
   margin-bottom: 10px;
-  break-inside: avoid; /* Prevent breaking inside a gallery item */
+  break-inside: avoid;
+  position: relative; /* Prevent breaking inside a gallery item */
 }
 
 .gallery-item img {
@@ -1773,4 +1806,14 @@ body {
   padding: 3px;
   font-weight: bold;
   margin-left: 5px; /* Adjust the spacing as needed */
+}
+
+.gallery-item .new-label {
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  background-color: var(--color-primary);
+  color: var(--primary-font-color);
+  padding: 5px; 
+  border-radius: 5px 0 0 0;
 }
