--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,20 +20,21 @@
 
 /* Colors */
 :root {
-  --color-default: #1D1D1D;
+  --color-default: #0a070a;
   --color-primary: #c526a0;
   --color-secondary: #1f1f24;
   --color-third: #19191b;
   --color-p: #6c757d;
 
   --primary-font-color: #fff;
+
+  --black-bg: #0a070a;
 }
 
 /* border radius */
 :root {
   --border-radius-10px: 10px;
   --border-raduis-100: 100%;
-
 }
 
 /* Smooth scroll behavior */
@@ -663,6 +664,10 @@ section {
   color: var(--color-primary);
 }
 
+.about .content p {
+  color: var(--primary-font-color);
+}
+
 .about .content p:last-child {
   margin-bottom: 0;
 }
@@ -786,7 +791,7 @@ section {
 
 .why-us .icon-box {
   text-align: center;
-  background: var(--color-default);
+  background: var(--color-third);
   padding: 40px 30px;
   width: 100%;
   height: 100%;
@@ -925,7 +930,7 @@ section {
 .menu .nav-link.active {
   color: var(--color-primary);
   border-color: var(--color-primary);
-  background-color: var(--color-default);
+  background-color: transparent !important;
 }
 
 .menu .tab-content .tab-header {
@@ -1743,7 +1748,7 @@ section {
 
 /* additionals */
 body {
-  background-color: #1D1D1D !important;
+  background-color: #0f0f0f !important;
 }
 
 
