corrected the typo and added social links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1761,8 +1761,8 @@ section {
 }
 
 .footer .social-links a:hover {
-  color: #fff;
-  border-color: #fff;
+  color: var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .footer .copyright {
